refactor: update project configuration and dependencies; improve UI components and user experience
- Updated `next.config.js` to remove unnecessary comments and streamline configuration.
- Added new dependencies: `@supabase/supabase-js` and `lucide-react` for enhanced functionality.
- Refined UI elements across various components, including layout adjustments and improved styling for better user interaction.
- Enhanced error handling in API routes and improved feedback mechanisms in forms.
- Updated branding from "FreshSure" to "FreSure" throughout the application for consistency.

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "postinstall": "node -e \"try { require('@next/swc-darwin-arm64'); } catch(e) { console.log('SWC binary will be downloaded on first run'); }\""
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.90.1",
     "axios": "^1.6.2",
     "date-fns": "^3.0.6",
+    "lucide-react": "^0.562.0",
     "next": "^14.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
